test/scc/stmt/semantic-errors/053.a
053.t:6:9: error: multiple default labels in one switch